BASE ANYSCALE BLOG EXAMPLE

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,25 @@
 # Default
+beautifulsoup4
+fastapi
 langchain
 matplotlib
 openai
-psycopg[binary,pool]
-pgvector
+pre-commit
+python-dotenv
 ray
 sentence_transformers
+slack_bolt
 streamlit
+structlog
+typer
+tiktoken
+
+# Vector DB
+asyncpg
+pgvector
+psycopg[binary,pool]
+psycopg2-binary
+sqlalchemy[asyncio]
 
 # Styling
 black
@@ -14,8 +27,3 @@ flake8
 Flake8-pyproject
 isort
 pyupgrade
-
-# Development
-fastapi
-pre-commit
-typer
