--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,166 @@
-# Default
-beautifulsoup4
-fastapi
-langchain
-matplotlib
-openai
-pre-commit
-python-dotenv
-ray
-sentence_transformers
-slack_bolt
-streamlit
-structlog
-typer
-tiktoken
-
-# Vector DB
-asyncpg
-pgvector
-psycopg[binary,pool]
-psycopg2-binary
-sqlalchemy[asyncio]
-
-# Styling
-black
-flake8
-Flake8-pyproject
-isort
-pyupgrade
+aiohttp==3.8.5
+aiosignal==1.3.1
+altair==5.1.1
+annotated-types==0.5.0
+anyio==3.7.1
+async-timeout==4.0.3
+asyncpg==0.28.0
+atlassian-python-api==3.41.2
+attrs==23.1.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.12.2
+black==23.9.1
+blinker==1.6.2
+cachetools==5.3.1
+certifi==2023.7.22
+cfgv==3.4.0
+charset-normalizer==3.2.0
+click==8.1.7
+cmake==3.27.5
+contourpy==1.1.1
+cycler==0.11.0
+dataclasses-json==0.6.0
+Deprecated==1.2.14
+distlib==0.3.7
+dnspython==2.4.2
+exceptiongroup==1.1.3
+fastapi==0.103.1
+filelock==3.12.4
+flake8==6.1.0
+Flake8-pyproject==1.2.3
+fonttools==4.42.1
+frozenlist==1.4.0
+fsspec==2023.9.2
+gitdb==4.0.10
+GitPython==3.1.37
+greenlet==2.0.2
+html2text==2020.1.16
+huggingface-hub==0.17.2
+identify==2.5.29
+idna==3.4
+importlib-metadata==6.8.0
+importlib-resources==6.1.0
+isort==5.12.0
+Jinja2==3.1.2
+joblib==1.3.2
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+kiwisolver==1.4.5
+langchain==0.0.300
+langsmith==0.0.40
+lit==16.0.6
+llama-hub==0.0.33
+llama-index==0.8.32
+loguru==0.7.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+matplotlib==3.7.3
+mccabe==0.7.0
+mdurl==0.1.2
+mpmath==1.3.0
+msgpack==1.0.6
+multidict==6.0.4
+mypy-extensions==1.0.0
+nest-asyncio==1.5.8
+networkx==3.1
+nltk==3.8.1
+nodeenv==1.8.0
+numexpr==2.8.6
+numpy==1.24.4
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.2
+openai==0.28.0
+packaging==23.1
+pandas==2.0.3
+pathspec==0.11.2
+pgvector==0.2.2
+Pillow==9.5.0
+pinecone-client==2.2.4
+pkgutil_resolve_name==1.3.10
+platformdirs==3.10.0
+pre-commit==3.4.0
+protobuf==4.24.3
+psutil==5.9.5
+psycopg==3.1.11
+psycopg-binary==3.1.11
+psycopg-pool==3.1.8
+psycopg2-binary==2.9.7
+pyarrow==13.0.0
+pycodestyle==2.11.0
+pydantic==2.3.0
+pydantic_core==2.6.3
+pydeck==0.8.1b0
+pyflakes==3.1.0
+Pygments==2.16.1
+PyMuPDF==1.23.3
+PyMuPDFb==1.23.3
+pyparsing==3.1.1
+pypdf==3.16.2
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3.post1
+pyupgrade==3.13.0
+PyYAML==6.0.1
+ray==2.7.0
+referencing==0.30.2
+regex==2023.8.8
+requests==2.31.0
+requests-oauthlib==1.3.1
+retrying==1.3.4
+rich==13.5.3
+rpds-py==0.10.3
+safetensors==0.3.3
+scikit-learn==1.3.1
+scipy==1.10.1
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
+six==1.16.0
+slack-bolt==1.18.0
+slack-sdk==3.22.0
+smmap==5.0.1
+sniffio==1.3.0
+soupsieve==2.5
+SQLAlchemy==2.0.21
+starlette==0.27.0
+streamlit==1.27.0
+structlog==23.1.0
+sympy==1.12
+tenacity==8.2.3
+threadpoolctl==3.2.0
+tiktoken==0.5.1
+tokenize-rt==5.2.0
+tokenizers==0.13.3
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.0
+torch==2.0.1
+torchvision==0.15.2
+tornado==6.3.3
+tqdm==4.66.1
+transformers==4.33.2
+triton==2.0.0
+typer==0.9.0
+typing-inspect==0.9.0
+typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==5.0.1
+urllib3==1.26.16
+validators==0.22.0
+virtualenv==20.24.5
+watchdog==3.0.0
+wrapt==1.15.0
+yarl==1.9.2
+zipp==3.17.0
