features: - save/load back index locally for faster retrieval - diminish logging

--- a/datasets/evaluation_results/2023-09-29_text-embedding-ada-002_gpt-3.5-turbo_1536_230.json
+++ b/datasets/evaluation_results/2023-09-29_text-embedding-ada-002_gpt-3.5-turbo_1536_230.json
@@ -1,1 +1,21 @@
-{}
+[
+    {},
+    {
+        "subjective_score": "Your subjective score here",
+        "query_str": "Can you tell me about the key concepts for safety finetuning",
+        "response": {
+            "response": "The key concepts for safety finetuning include privacy-preserving mechanisms such as Differential Privacy (DP), Homomorphic Encryption (HE), and Multi-Party Computation (MPC). These concepts are used to protect the privacy of training data and prevent the disclosure of participant identities in federated learning frameworks. Masking techniques and cryptographic methods are also employed to obfuscate gradients and prevent malicious parties from drawing conclusions about the data set.",
+            "source_nodes": [],
+            "metadata": null
+        }
+    },
+    {
+        "subjective_score": "Your subjective score here",
+        "query_str": "Tell me about LVR",
+        "response": {
+            "response": "LVR stands for Loan-to-Value Ratio. It is a financial term used by lenders to assess the risk of a loan. The LVR is calculated by dividing the loan amount by the appraised value of the property. It is expressed as a percentage. A higher LVR indicates a higher risk for the lender, as it means the borrower has less equity in the property. Lenders often have maximum LVR limits for different types of loans.",
+            "source_nodes": [],
+            "metadata": null
+        }
+    }
+]
