--- a/requirements.txt
+++ b/requirements.txt
@@ -1,215 +1,91 @@
 aiohttp==3.8.5
 aiosignal==1.3.1
-altair==5.1.1
 annotated-types==0.5.0
 anyio==3.7.1
-assemblyai==0.18.0
-asttokens==2.4.0
 async-timeout==4.0.3
-asyncpg==0.28.0
 atlassian-python-api==3.41.2
 attrs==23.1.0
-backcall==0.2.0
-backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.2
-black==23.9.1
-blinker==1.6.2
-Brotli==1.1.0
 cachetools==5.3.1
 certifi==2023.7.22
-cfgv==3.4.0
-charset-normalizer==3.2.0
+cffi==1.16.0
+charset-normalizer==3.3.0
 click==8.1.7
-cmake==3.27.5
-comm==0.1.4
-contourpy==1.1.1
-cycler==0.11.0
-dataclasses-json==0.6.0
-debugpy==1.8.0
-decorator==5.1.1
+cryptography==41.0.4
+dataclasses-json==0.6.1
 Deprecated==1.2.14
 deprecation==2.1.0
-distlib==0.3.7
 dnspython==2.4.2
 exceptiongroup==1.1.3
-executing==1.2.0
-fastapi==0.103.1
 filelock==3.12.4
-flake8==6.1.0
-Flake8-pyproject==1.2.3
-fonttools==4.42.1
 frozenlist==1.4.0
 fsspec==2023.9.2
-gitdb==4.0.10
-GitPython==3.1.37
-google-api-core==2.12.0
-google-api-python-client==2.101.0
 google-auth==2.23.2
 google-auth-httplib2==0.1.1
 google-auth-oauthlib==1.1.0
-googleapis-common-protos==1.60.0
-greenlet==2.0.2
-h11==0.14.0
+greenlet==3.0.0
 html2text==2020.1.16
-httpcore==0.18.0
 httplib2==0.22.0
-httpx==0.25.0
-huggingface-hub==0.17.2
-identify==2.5.29
+huggingface-hub==0.16.4
 idna==3.4
-importlib-metadata==6.8.0
-importlib-resources==6.1.0
-ipykernel==6.25.2
-ipython==8.12.2
-isort==5.12.0
-jedi==0.19.0
-Jinja2==3.1.2
 joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
-jsonschema==4.19.1
-jsonschema-specifications==2023.7.1
-jupyter_client==8.3.1
-jupyter_core==5.3.1
-kiwisolver==1.4.5
-langchain==0.0.300
-langsmith==0.0.40
-lit==16.0.6
-llama-hub==0.0.33
-llama-index==0.8.32
+langchain==0.0.308
+langsmith==0.0.42
+llama-hub==0.0.34
+llama-index==0.8.39.post2
 loguru==0.7.2
 lxml==4.9.3
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
 marshmallow==3.20.1
-matplotlib==3.7.3
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-mdurl==0.1.2
-mpmath==1.3.0
-msgpack==1.0.6
 multidict==6.0.4
-mutagen==1.47.0
 mypy-extensions==1.0.0
 nest-asyncio==1.5.8
-networkx==3.1
 nltk==3.8.1
-nodeenv==1.8.0
-numexpr==2.8.6
-numpy==1.24.4
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
+numpy==1.26.0
 oauthlib==3.2.2
-openai==0.28.0
-packaging==23.1
-pandas==2.0.3
-parso==0.8.3
-pathspec==0.11.2
+openai==0.28.1
+packaging==23.2
+pandas==2.1.1
 pdfminer==20191125
-pexpect==4.8.0
-pgvector==0.2.2
-pickleshare==0.7.5
-pikepdf==8.4.1
-Pillow==9.5.0
+pdfminer.six==20221105
+pikepdf==8.5.0
+Pillow==10.0.1
 pinecone-client==2.2.4
-pkgutil_resolve_name==1.3.10
-platformdirs==3.10.0
-pre-commit==3.4.0
-prompt-toolkit==3.0.39
-protobuf==4.24.3
 psutil==5.9.5
-psycopg==3.1.11
-psycopg-binary==3.1.11
-psycopg-pool==3.1.8
-psycopg2-binary==2.9.7
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==13.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
-pycodestyle==2.11.0
+pycparser==2.21
 pycryptodome==3.19.0
-pycryptodomex==3.19.0
-pydantic==2.3.0
-pydantic_core==2.6.3
-pydeck==0.8.1b0
-pyflakes==3.1.0
-Pygments==2.16.1
-PyMuPDF==1.23.3
+pydantic==2.4.2
+pydantic_core==2.10.1
+PyMuPDF==1.23.4
 PyMuPDFb==1.23.3
 pyparsing==3.1.1
 pypdf==3.16.2
+PyPDF2==3.0.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
-pytube==15.0.0
 pytz==2023.3.post1
-pyupgrade==3.13.0
 PyYAML==6.0.1
-pyzmq==25.1.1
-ray==2.7.0
-referencing==0.30.2
-regex==2023.8.8
+regex==2023.10.3
 requests==2.31.0
 requests-oauthlib==1.3.1
 retrying==1.3.4
-rich==13.5.3
-rpds-py==0.10.3
 rsa==4.9
 safetensors==0.3.3
-scikit-learn==1.3.1
-scipy==1.10.1
-sentence-transformers==2.2.2
-sentencepiece==0.1.99
 six==1.16.0
-slack-bolt==1.18.0
-slack-sdk==3.22.0
-smmap==5.0.1
 sniffio==1.3.0
 soupsieve==2.5
 SQLAlchemy==2.0.21
-stack-data==0.6.2
-starlette==0.27.0
-streamlit==1.27.0
-structlog==23.1.0
-sympy==1.12
 tenacity==8.2.3
-threadpoolctl==3.2.0
 tiktoken==0.5.1
-tokenize-rt==5.2.0
-tokenizers==0.13.3
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.0
-torch==2.0.1
-torchvision==0.15.2
-tornado==6.3.3
+tokenizers==0.14.0
 tqdm==4.66.1
-traitlets==5.10.1
-transformers==4.33.2
-triton==2.0.0
-typer==0.9.0
+transformers==4.34.0
 typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
-tzlocal==5.0.1
-uritemplate==4.1.1
-urllib3==1.26.16
-validators==0.22.0
-virtualenv==20.24.5
-watchdog==3.0.0
-wcwidth==0.2.6
-websockets==11.0.3
+urllib3==1.26.17
 wrapt==1.15.0
 yarl==1.9.2
-youtube-transcript-api==0.6.1
-yt-dlp==2023.9.24
-zipp==3.17.0
