chore: update requirements.txt, clean TODOs, add NOTES

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,314 +1,114 @@
-aiohttp==3.8.5
+aiohttp==3.8.6
 aiosignal==1.3.1
-annotated-types==0.5.0
-anyio==3.6.2
-apturl==0.5.2
-assemblyai==0.18.0
-asttokens==2.2.0
-async-generator==1.10
+annotated-types==0.6.0
+anyio==3.7.1
 async-timeout==4.0.3
-asynctest==0.13.0
 atlassian-python-api==3.41.2
 attrs==23.1.0
-autobahn==21.11.1
-Automat==20.2.0
-backcall==0.2.0
-base58==1.0.3
-bcrypt==3.2.0
 beautifulsoup4==4.12.2
-bitarray==2.8.1
-black==23.3.0
-blinker==1.6.3
-blis==0.7.9
-Brlapi==0.8.3
 Brotli==1.1.0
-cachetools==5.3.0
-catalogue==2.0.8
-cbor==1.0.0
-certifi==2022.12.7
-cffi==1.16.0
-cfgv==3.3.1
-chardet==4.0.0
-charset-normalizer==3.1.0
+cachetools==5.3.1
+certifi==2023.7.22
+charset-normalizer==3.3.0
+ci-info==0.3.0
 click==8.1.7
-colorama==0.4.6
-command-not-found==0.3
-confection==0.0.4
-constantly==15.1.0
-coverage==7.2.3
-cryptography==41.0.4
-cssselect==1.2.0
-cupshelpers==1.0
-cymem==2.0.7
-Cython==0.29.28
-cytoolz==0.12.2
-dacite==1.6.0
-dataclasses-json==0.6.1
-dbus-python==1.2.18
-debugpy==1.6.4
-decorator==5.1.1
-defer==1.0.6
+configobj==5.0.8
+configparser==6.0.0
+dataclasses-json==0.5.14
 Deprecated==1.2.14
 deprecation==2.1.0
-distlib==0.3.6
-distro==1.7.0
-distro-info===1.1build1
-dnspython==2.3.0
-docker==6.0.1
-duckduckgo-search==2.8.6
-duplicity==0.8.21
-ecdsa==0.18.0b1
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl
-entrypoints==0.4
-et-xmlfile==1.1.0
-eth-abi==4.2.1
-eth-account==0.9.0
-eth-hash==0.5.2
-eth-keyfile==0.6.1
-eth-keys==0.4.0
-eth-rlp==0.3.0
-eth-typing==3.5.0
-eth-utils==2.2.1
+dnspython==2.4.2
+etelemetry==0.3.1
 exceptiongroup==1.1.3
-executing==1.2.0
-fasteners==0.14.1
-filelock==3.12.0
-flake8==6.0.0
-Flask==3.0.0
-flatbuffers===1.12.1-git20200711.33e2d80-dfsg1-0.6
+filelock==3.12.4
 frozenlist==1.4.0
 fsspec==2023.9.2
-future==0.18.2
-GeoIP==1.3.2
-gitdb==4.0.10
-GitPython==3.1.31
-google-api-core==2.11.0
-google-api-python-client==2.84.0
-google-auth==2.17.2
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==1.0.0
-googleapis-common-protos==1.59.0
+future==0.18.3
+google-api-core==2.12.0
+google-api-python-client==2.103.0
+google-auth==2.23.3
+google-auth-httplib2==0.1.1
+googleapis-common-protos==1.61.0
 greenlet==3.0.0
-gTTS==2.3.1
-gyp==0.1
-h11==0.14.0
-hexbytes==0.3.1
-hkdf==0.0.3
 html2text==2020.1.16
-httpcore==0.17.0
 httplib2==0.22.0
-httpx==0.24.0
-humanize==0.0.0
-hyperlink==21.0.0
-identify==2.5.22
+huggingface-hub==0.17.3
 idna==3.4
-importlib-metadata==4.6.4
-incremental==21.3.0
-iniconfig==2.0.0
-ipykernel==6.17.1
-ipython==8.7.0
-isort==5.12.0
-itsdangerous==2.1.2
-jedi==0.18.2
-jeepney==0.7.1
-Jinja2==3.1.2
+isodate==0.6.1
 joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
-jsonschema==4.17.3
-jupyter_client==7.4.7
-jupyter_core==5.1.0
-keyring==23.5.0
-langchain==0.0.308
-langcodes==3.3.0
-langsmith==0.0.42
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-llama-hub==0.0.34
+langchain==0.0.314
+langsmith==0.0.43
+llama-hub==0.0.37
 llama-index==0.8.39.post2
-lockfile==0.12.2
-loguru==0.7.0
-louis==3.20.0
-lru-dict==1.2.0
+loguru==0.7.2
+looseversion==1.3.0
 lxml==4.9.3
-lz4==3.1.3+dfsg
-macaroonbakery==1.3.1
-magic-wormhole==0.12.0
-Mako==1.1.3
-MarkupSafe==2.1.3
 marshmallow==3.20.1
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-mnemonic==0.19
-monotonic==1.6
-more-itertools==8.10.0
-msgpack==1.0.3
 multidict==6.0.4
-murmurhash==1.0.9
 mutagen==1.47.0
 mypy-extensions==1.0.0
 nest-asyncio==1.5.8
-netifaces==0.11.0
+networkx==3.1
+nibabel==5.1.0
+nipype==1.8.6
 nltk==3.8.1
-nodeenv==1.7.0
-numpy==1.26.0
+numpy==1.26.1
 oauthlib==3.2.2
-olefile==0.46
 openai==0.28.1
-openpyxl==3.1.2
-orjson==3.8.10
-outcome==1.2.0
 packaging==23.2
 pandas==2.1.1
-paramiko==2.9.3
-parsimonious==0.9.0
-parso==0.8.3
-passlib==1.7.4
-pathspec==0.11.1
-pathy==0.10.1
+pathlib==1.0.1
 pdfminer==20191125
-pdfminer.six==20221105
-pexpect==4.8.0
-pickleshare==0.7.5
-pikepdf==8.5.0
+pikepdf==8.5.1
 Pillow==10.0.1
-pinecone-client==2.2.1
-pipenv==2023.4.20
-platformdirs==3.2.0
-playsound==1.2.2
-pluggy==1.0.0
-ply==3.11
-pokemontcgsdk==3.4.0
-pre-commit==3.2.2
-preshed==3.0.8
-prompt-toolkit==3.0.33
-protobuf==4.22.1
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py-cpuinfo==9.0.0
-py-ubjson==0.16.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.20.1
-pycodestyle==2.10.0
-pycparser==2.21
+pinecone-client==2.2.4
+protobuf==4.24.4
+prov==2.0.0
+psutil==5.9.6
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycryptodome==3.19.0
 pycryptodomex==3.19.0
-pycups==2.0.1
-pydantic==2.3.0
-pydantic_core==2.6.3
-pyflakes==3.0.1
-Pygments==2.13.0
-PyGObject==3.42.1
-PyHamcrest==2.0.2
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyMuPDF==1.23.4
-PyMuPDFb==1.23.3
-PyNaCl==1.5.0
-pyOpenSSL==21.0.0
-pyparsing==3.0.9
-pypdf==3.16.2
-PyPDF2==3.0.1
-pypng==0.0.20
-PyQRCode==1.2.1
-pyRFC3339==1.1
-pyrsistent==0.19.3
-PySocks==1.7.1
-pytest==7.3.1
-pytest-asyncio==0.21.0
-pytest-benchmark==4.0.0
-pytest-cov==4.0.0
-pytest-integration==0.2.3
-pytest-mock==3.10.0
-python-apt==2.4.0+ubuntu1
+pydantic==2.4.2
+pydantic_core==2.10.1
+pydot==1.4.2
+PyMuPDF==1.23.5
+PyMuPDFb==1.23.5
+pyparsing==3.1.1
+pypdf==3.16.4
 python-dateutil==2.8.2
-python-debian===0.1.43ubuntu1
 python-dotenv==1.0.0
-python-snappy==0.5.3
-PyTrie==0.4.0
-pytube==15.0.0
 pytz==2023.3.post1
-pyunormalize==15.0.0
-pyxdg==0.27
+pyxnat==1.6
 PyYAML==6.0.1
-pyzmq==24.0.1
-readability-lxml==0.8.1
-redis==4.5.4
+rdflib==7.0.0
 regex==2023.10.3
-reportlab==3.6.8
-requests==2.28.2
+requests==2.31.0
 requests-oauthlib==1.3.1
-requests-unixsocket==0.2.0
 retrying==1.3.4
-rlp==3.0.0
 rsa==4.9
-scipy==1.11.2
-SecretStorage==3.3.1
-selenium==4.9.0
-service-identity==18.1.0
+safetensors==0.4.0
+scipy==1.11.3
+simplejson==3.19.2
 six==1.16.0
-smart-open==6.3.0
-smmap==5.0.0
 sniffio==1.3.0
-sortedcontainers==2.1.0
 soupsieve==2.5
-spacy==3.4.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.4
-spake2==0.8
-SQLAlchemy==2.0.21
-srsly==2.4.6
-stack-data==0.6.2
-systemd-python==234
+SQLAlchemy==2.0.22
 tenacity==8.2.3
-thinc==8.1.9
 tiktoken==0.5.1
-tomli==2.0.1
-toolz==0.12.0
-tornado==6.2
+tokenizers==0.14.1
 tqdm==4.66.1
-traitlets==5.6.0
-trio==0.22.0
-trio-websocket==0.10.2
-tweepy==4.13.0
-Twisted==22.1.0
-txaio==21.2.1
-txtorcon==20.0.0
-typer==0.7.0
+traits==6.3.2
+transformers==4.34.0
 typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
-u-msgpack-python==2.3.0
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-ujson==5.1.0
-unattended-upgrades==0.1
 uritemplate==4.1.1
-urllib3==1.26.15
-usb-creator==0.3.7
-virtualenv==20.22.0
-virtualenv-clone==0.3.0
-wadllib==1.3.6
-wasabi==0.10.1
-wcwidth==0.2.5
-web3==6.10.0
-webdriver-manager==3.8.6
-websocket-client==1.5.1
+urllib3==1.26.17
 websockets==11.0.3
-Werkzeug==3.0.0
 wrapt==1.15.0
-wsaccel==0.6.3
-wsproto==1.2.0
-xdg==5
-xkit==0.0.0
 yarl==1.9.2
-youtube-dl==2021.12.17
-youtube-transcript-api==0.5.0
-yt-dlp==2023.9.24
-zipp==1.0.0
-zope.interface==5.4.0
+youtube-transcript-api==0.6.1
+yt-dlp==2023.10.13
