--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ aiohttp==3.8.6
 aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==3.7.1
+assemblyai==0.18.0
 async-timeout==4.0.3
 atlassian-python-api==3.41.2
 attrs==23.1.0
 beautifulsoup4==4.12.2
+blinker==1.6.3
 Brotli==1.1.0
 cachetools==5.3.1
 certifi==2023.7.22
@@ -21,6 +23,7 @@ dnspython==2.4.2
 etelemetry==0.3.1
 exceptiongroup==1.1.3
 filelock==3.12.4
+Flask==3.0.0
 frozenlist==1.4.0
 fsspec==2023.9.2
 future==0.18.3
@@ -30,11 +33,16 @@ google-auth==2.23.3
 google-auth-httplib2==0.1.1
 googleapis-common-protos==1.61.0
 greenlet==3.0.0
+h11==0.14.0
 html2text==2020.1.16
+httpcore==0.18.0
 httplib2==0.22.0
+httpx==0.25.0
 huggingface-hub==0.17.3
 idna==3.4
 isodate==0.6.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
 joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
@@ -45,6 +53,7 @@ llama-index==0.8.39.post2
 loguru==0.7.2
 looseversion==1.3.0
 lxml==4.9.3
+MarkupSafe==2.1.3
 marshmallow==3.20.1
 multidict==6.0.4
 mutagen==1.47.0
@@ -108,6 +117,7 @@ tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.17
 websockets==11.0.3
+Werkzeug==3.0.0
 wrapt==1.15.0
 yarl==1.9.2
 youtube-transcript-api==0.6.1
