--- a/src/Llama_index_sandbox/Dockerfile
+++ b/src/Llama_index_sandbox/Dockerfile
@@ -4,8 +4,8 @@ FROM python:3.9-slim
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy the dependencies file to the working directory
-COPY requirements.txt .
+# Copy the requirements file to the working directory in the container
+COPY requirements.txt /app/
 
 # Install any dependencies
 RUN pip install --no-cache-dir -r requirements.txt
