--- a/src/Llama_index_sandbox/cloudbuild.yaml
+++ b/src/Llama_index_sandbox/cloudbuild.yaml
@@ -1,4 +1,7 @@
 steps:
+  - name: 'gcr.io/cloud-builders/cp'
+    args: ['-r', './requirements.txt', './src/Llama_index_sandbox/evaluation/']  # Copy requirements.txt to the evaluation directory
+
   # Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/mev-fyi/llama-flask-app:$SHORT_SHA', './src/Llama_index_sandbox']
