--- a/src/Llama_index_sandbox/evaluation/cloudbuild.yaml
+++ b/src/Llama_index_sandbox/evaluation/cloudbuild.yaml
@@ -1,4 +1,7 @@
 steps:
+  - name: 'gcr.io/cloud-builders/cp'
+    args: [ '-r', './requirements.txt', './src/Llama_index_sandbox/' ]  # Copy requirements.txt to the evaluation directory
+
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/mev-fyi/llama-eval-app:$SHORT_SHA', './src/Llama_index_sandbox/evaluation']
 
