fix: simplify cloudbuild.yaml, Dockerfile

--- a/src/Llama_index_sandbox/evaluation/Dockerfile
+++ b/src/Llama_index_sandbox/evaluation/Dockerfile
@@ -3,11 +3,11 @@ FROM python:3.9-slim
 WORKDIR /app
 
 # Copy the requirements file to the working directory in the container
-COPY src/Llama_index_sandbox/evaluation/requirements.txt /app/
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the evaluation script directory
-COPY src/Llama_index_sandbox/evaluation .
+COPY src/Llama_index_sandbox
 
 # Command to run the evaluation script
 CMD ["python", "eval.py"]
