--- a/src/Llama_index_sandbox/Dockerfile
+++ b/src/Llama_index_sandbox/Dockerfile
@@ -5,13 +5,13 @@ FROM python:3.9-slim
 WORKDIR /app
 
 # Copy the requirements file to the working directory in the container
-COPY requirements.txt /app/
+COPY requirements.txt .
 
 # Install any dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy only the relevant directory to the working directory
-COPY src/Llama_index_sandbox/app.py .
+COPY src/Llama_index_sandbox .
 
 # Expose the port the app runs on
 EXPOSE 8080
