fix: try removing requirements.txt cloudbuilder copy step, fix dockerfile missing dot

--- a/src/Llama_index_sandbox/evaluation/Dockerfile
+++ b/src/Llama_index_sandbox/evaluation/Dockerfile
@@ -7,7 +7,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the evaluation script directory
-COPY src/Llama_index_sandbox
+COPY src/Llama_index_sandbox .
 
 # Command to run the evaluation script
 CMD ["python", "eval.py"]
