--- a/src/Llama_index_sandbox/evaluation/cloudbuild_eval.yaml
+++ b/src/Llama_index_sandbox/evaluation/cloudbuild_eval.yaml
@@ -1,6 +1,12 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/mev-fyi/llama-eval-app:$SHORT_SHA', './src/Llama_index_sandbox']
+    args:
+      - 'build'
+      - '-t'
+      - 'gcr.io/mev-fyi/llama-eval-app:$SHORT_SHA'
+      - '-f'  # Specify the Dockerfile path
+      - './Dockerfile_eval'  # Use the path to your Dockerfile
+      - './src/Llama_index_sandbox'
 
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/mev-fyi/llama-eval-app:$SHORT_SHA']
