--- a/src/Llama_index_sandbox/evaluation/cloudbuild_run_eval.yaml
+++ b/src/Llama_index_sandbox/evaluation/cloudbuild_run_eval.yaml
@@ -1,9 +1,17 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/mev-fyi/llama-eval-app:$SHORT_SHA', './src/Llama_index_sandbox/evaluation']
+    args:
+      - 'build'
+      - '-t'
+      - 'gcr.io/mev-fyi/llama-eval-app:$SHORT_SHA'
+      - '-f'  # Specify the Dockerfile path
+      - './Dockerfile_eval'  # Use the path to your Dockerfile
+      - './src/Llama_index_sandbox/evaluation'
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/mev-fyi/llama-eval-app:$SHORT_SHA']
+    args:
+      - 'push'
+      - 'gcr.io/mev-fyi/llama-eval-app:$SHORT_SHA'
 
   # Deploy to Google Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -11,7 +19,7 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'llama-eval-service'  # Update this to the appropriate service name
+      - 'llama-eval-service'
       - '--image'
       - 'gcr.io/mev-fyi/llama-eval-app:$SHORT_SHA'
       - '--region'
@@ -20,8 +28,9 @@ steps:
       - '--service-account'
       - 'cloud-run-backend@mev-fyi.iam.gserviceaccount.com'
       - '--update-env-vars'
-      - 'OPENAI_API_KEY=sm://mev-fyi/OPENAI_API_KEY,'
+      - 'OPENAI_API_KEY=sm://mev-fyi/OPENAI_API_KEY,'  # Add other secrets similarly
       - 'OPENAI_API_BASE_ANYSCALE=sm://mev-fyi/OPENAI_API_BASE_ANYSCALE,'  # Add other secrets similarly
+      - 'YOUTUBE_API_KEY=sm://mev-fyi/YOUTUBE_API_KEY,'
       - 'ASSEMBLY_AI_API_KEY=sm://mev-fyi/ASSEMBLY_AI_API_KEY,'
       - 'PINECONE_API_KEY=sm://mev-fyi/PINECONE_API_KEY,'
       - 'PINECONE_API_ENVIRONMENT=sm://mev-fyi/PINECONE_API_ENVIRONMENT,'
@@ -37,7 +46,9 @@ availableSecrets:
     - versionName: projects/mev-fyi/secrets/OPENAI_API_KEY/versions/latest
       env: 'OPENAI_API_KEY'
     - versionName: projects/mev-fyi/secrets/OPENAI_API_BASE_ANYSCALE/versions/latest
-      env: 'OPENAI_API_BASE_ANYSCALE'  # Add other secrets similarly
+      env: 'OPENAI_API_BASE_ANYSCALE'
+    - versionName: projects/mev-fyi/secrets/YOUTUBE_API_KEY/versions/latest
+      env: 'YOUTUBE_API_KEY'
     - versionName: projects/mev-fyi/secrets/ASSEMBLY_AI_API_KEY/versions/latest
       env: 'ASSEMBLY_AI_API_KEY'
     - versionName: projects/mev-fyi/secrets/PINECONE_API_KEY/versions/latest
