--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ anyio==3.7.1
 async-timeout==4.0.3
 atlassian-python-api==3.41.3
 attrs==23.1.0
+beautifulsoup4==4.12.2
+blinker==1.7.0
 cachetools==5.3.2
 certifi==2023.7.22
 charset-normalizer==3.3.2
@@ -21,6 +23,7 @@ etelemetry==0.3.1
 exceptiongroup==1.1.3
 filelock==3.13.1
 fitz==0.0.1.dev2
+Flask==3.0.0
 frozenlist==1.4.0
 fsspec==2023.10.0
 future==0.18.3
@@ -39,6 +42,7 @@ httplib2==0.22.0
 huggingface-hub==0.17.3
 idna==3.4
 isodate==0.6.1
+itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.3.2
 jsonpatch==1.33
@@ -46,7 +50,7 @@ jsonpointer==2.4
 langchain==0.0.330
 langsmith==0.0.57
 llama-hub==0.0.43
-llama-index==0.8.59
+llama-index==0.8.39.post2
 loguru==0.7.2
 looseversion==1.3.0
 lxml==4.9.3
@@ -112,6 +116,7 @@ scipy==1.11.3
 simplejson==3.19.2
 six==1.16.0
 sniffio==1.3.0
+soupsieve==2.5
 SQLAlchemy==2.0.23
 sympy==1.12
 tenacity==8.2.3
@@ -127,5 +132,6 @@ typing_extensions==4.8.0
 tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.18
+Werkzeug==3.0.1
 wrapt==1.15.0
 yarl==1.9.2
