fix: attempt copying the whole repo to the docker image

--- a/Dockerfile_app
+++ b/Dockerfile_app
@@ -11,7 +11,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy only the relevant directory to the working directory
-COPY src/Llama_index_sandbox .
+COPY . .
 
 # Expose the port the app runs on
 EXPOSE 8080
