fix: Dockerfile_app, Dockerfile_eval, .dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -11,3 +11,10 @@ dist/
 .gitignore
 Dockerfile
 *.md
+logs/
+data/
+experiments/
+migrations/
+notebooks/
+src/anyscale_sandbox/
+src/blog_example/
