--- a/Dockerfile_app
+++ b/Dockerfile_app
@@ -13,12 +13,16 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy only the relevant directory to the working directory
 COPY . .
 
+# Append src directory to PYTHONPATH
+ENV PYTHONPATH "${PYTHONPATH}:/app/src"
+
+# Set the Flask app to the correct file
+ENV FLASK_APP=src/Llama_index_sandbox/app.py
+ENV FLASK_RUN_HOST=0.0.0.0
+ENV FLASK_RUN_PORT=8080
+
 # Expose the port the app runs on
 EXPOSE 8080
-
-# Set the Flask environment variables
-ENV FLASK_APP=app.py
-ENV FLASK_RUN_HOST=0.0.0.0
 
 # Command to run the application
 CMD ["flask", "run"]
