features: add test case for app.py, - try to test host and port directly on app.py - add list of docker_helper_commands - update Dockerfile_app - add rebuild_dockerfile.sh script to test dockerfile locally - add test_app.sh to test the rebuilt dockerfile

--- a/Dockerfile_app
+++ b/Dockerfile_app
@@ -25,4 +25,4 @@ ENV FLASK_RUN_PORT=8080
 EXPOSE 8080
 
 # Command to run the application
-CMD ["flask", "run"]
+CMD ["python", "src/Llama_index_sandbox/app.py"]
