--- a/Dockerfile_eval
+++ b/Dockerfile_eval
@@ -1,5 +1,8 @@
 FROM python:3.9-slim
 
+# Use a build argument to specify the context
+ARG DOCKERIGNORE_CONTEXT=eval
+
 WORKDIR /app
 
 # Copy the requirements file first to leverage Docker cache
@@ -8,6 +11,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the whole app
 COPY . .
+
+# Use the build argument to copy the correct .dockerignore file before the build
+COPY .dockerignore.${DOCKERIGNORE_CONTEXT} ./.dockerignore
 
 # Append src directory to PYTHONPATH
 ENV PYTHONPATH "${PYTHONPATH}:/app/src"
