features: add health check, set app run debug to False

--- a/Dockerfile_app
+++ b/Dockerfile_app
@@ -22,6 +22,9 @@ COPY .dockerignore.${DOCKERIGNORE_CONTEXT} ./.dockerignore
 # Append src directory to PYTHONPATH
 ENV PYTHONPATH "${PYTHONPATH}:/app/src"
 
+# Set the Flask environment to production
+ENV FLASK_ENV=production
+
 # Set the Flask app to the correct file
 ENV FLASK_APP=src/Llama_index_sandbox/app.py
 ENV FLASK_RUN_HOST=0.0.0.0
@@ -32,3 +35,7 @@ EXPOSE 8080
 
 # Command to run the application
 CMD ["python", "src/Llama_index_sandbox/app.py"]
+
+# TODO 2023-11-06:
+# 4. Modify the Flask Run Command
+# For better production performance and security, do not use the built-in Flask server (app.run()) for production. Instead, use a WSGI server like gunicorn. You can change your CMD in the Dockerfile:
