features: add gunicorn to use a production WSGI server as logged by GCS - set app port to 8080, host to 0.0.0.0

--- a/Dockerfile_app
+++ b/Dockerfile_app
@@ -34,8 +34,4 @@ ENV FLASK_RUN_PORT=8080
 EXPOSE 8080
 
 # Command to run the application
-CMD ["python", "src/Llama_index_sandbox/app.py"]
-
-# TODO 2023-11-06:
-# 4. Modify the Flask Run Command
-# For better production performance and security, do not use the built-in Flask server (app.run()) for production. Instead, use a WSGI server like gunicorn. You can change your CMD in the Dockerfile:
+CMD ["gunicorn", "-b", "0.0.0.0:8080", "src.Llama_index_sandbox.app:app"]
