--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ greenlet==3.0.1
 grpc-google-iam-v1==0.12.6
 grpcio==1.59.2
 grpcio-status==1.59.2
+gunicorn==21.2.0
 html2text==2020.1.16
 httplib2==0.22.0
 huggingface-hub==0.17.3
