--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ exceptiongroup==1.1.3
 filelock==3.13.1
 fitz==0.0.1.dev2
 Flask==3.0.0
+Flask-Cors==4.0.0
 frozenlist==1.4.0
 fsspec==2023.10.0
 future==0.18.3
