--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,8 @@ google-api-core==2.12.0
 google-api-python-client==2.106.0
 google-auth==2.23.4
 google-auth-httplib2==0.1.1
+google-cloud-core==2.3.3
+google-cloud-firestore==2.13.1
 google-cloud-secret-manager==2.16.4
 googleapis-common-protos==1.61.0
 greenlet==3.0.1
