fix: attempt fixing SSL connection issue of GCS <> pinecone with installing CA certificates directly in the Docker image

--- a/Dockerfile_app
+++ b/Dockerfile_app
@@ -11,7 +11,10 @@ WORKDIR /app
 COPY requirements.txt .
 
 # Install any dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends ca-certificates && \
+    rm -rf /var/lib/apt/lists/* && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Copy only the relevant directory to the working directory
 COPY . .
