--- a/Dockerfile_app
+++ b/Dockerfile_app
@@ -1,5 +1,5 @@
 # Use an official lightweight Python image
-FROM python:3.9-slim
+FROM python:3.9
 
 # Use a build argument to specify the context
 ARG DOCKERIGNORE_CONTEXT=app
