feat: update machine type in cloudbuild to increase build speed

--- a/cloudbuild_app.yaml
+++ b/cloudbuild_app.yaml
@@ -14,3 +14,7 @@ steps:
 
 images:
   - 'gcr.io/mev-fyi/llama-flask-app:$SHORT_SHA'
+
+# Specify the machine type for the build
+options:
+  machineType: 'E2_HIGHCPU_8'
