--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,29 @@
-aiohttp==3.8.6
+aiohttp==3.9.1
 aiosignal==1.3.1
 aiostream==0.5.2
 annotated-types==0.6.0
 anyio==3.7.1
+assemblyai==0.20.0
 async-timeout==4.0.3
 atlassian-python-api==3.41.3
 attrs==23.1.0
 beautifulsoup4==4.12.2
 blinker==1.7.0
+Brotli==1.1.0
 cachetools==5.3.2
-certifi==2023.7.22
+certifi==2023.11.17
 charset-normalizer==3.3.2
 ci-info==0.3.0
 click==8.1.7
 configobj==5.0.8
 configparser==6.0.0
-dataclasses-json==0.5.14
+dataclasses-json==0.6.3
 Deprecated==1.2.14
 deprecation==2.1.0
+distro==1.8.0
 dnspython==2.4.2
 etelemetry==0.3.1
-exceptiongroup==1.1.3
+exceptiongroup==1.2.0
 filelock==3.13.1
 fitz==0.0.1.dev2
 Flask==3.0.0
@@ -41,18 +44,22 @@ grpc-google-iam-v1==0.12.6
 grpcio==1.59.2
 grpcio-status==1.59.2
 gunicorn==21.2.0
+h11==0.14.0
 html2text==2020.1.16
+httpcore==1.0.2
 httplib2==0.22.0
+httpx==0.25.2
 huggingface-hub==0.17.3
-idna==3.4
+idna==3.6
 isodate==0.6.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
-langchain==0.0.330
-langsmith==0.0.57
+langchain==0.0.341
+langchain-core==0.0.6
+langsmith==0.0.67
 llama-hub==0.0.43
 llama-index==0.8.39.post2
 loguru==0.7.2
@@ -62,13 +69,14 @@ MarkupSafe==2.1.3
 marshmallow==3.20.1
 mpmath==1.3.0
 multidict==6.0.4
+mutagen==1.47.0
 mypy-extensions==1.0.0
 nest-asyncio==1.5.8
 networkx==3.2.1
 nibabel==5.1.0
 nipype==1.8.6
 nltk==3.8.1
-numpy==1.26.1
+numpy==1.26.2
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
@@ -84,7 +92,7 @@ nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
 openai==0.28.1
 packaging==23.2
-pandas==2.1.2
+pandas==2.1.3
 pathlib==1.0.1
 pdfminer==20191125
 pikepdf==8.6.0
@@ -97,8 +105,9 @@ psutil==5.9.6
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycryptodome==3.19.0
-pydantic==2.4.2
-pydantic_core==2.10.1
+pycryptodomex==3.19.0
+pydantic==2.5.2
+pydantic_core==2.14.5
 pydot==1.4.2
 PyMuPDF==1.23.5
 PyMuPDFb==1.23.5
@@ -135,7 +144,9 @@ typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
 uritemplate==4.1.1
-urllib3==1.26.12
+urllib3==2.1.0
+websockets==12.0
 Werkzeug==3.0.1
 wrapt==1.15.0
-yarl==1.9.2
+yarl==1.9.3
+yt-dlp==2023.11.16
