feat: update .env.template, make google secrets load optional if running locally

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,8 @@
 OPENAI_API_KEY=
-EMBEDDING_MODEL_NAME=BAAI/bge-large-en-v1.5
-LLM=meta-llama/Llama-2-7b-chat-hf
-# DB_CONNECTION_STRING is for the Postgres database in the Anyscale example
-DB_CONNECTION_STRING=
-# Standard Pinecone Pricing is From From $70/month estimated for one index on one s1 pod running for 30 days at $0.096/hour
+EMBEDDING_MODEL_NAME=
+LLM_MODEL_NAME=
 PINECONE_API_KEY=
 PINECONE_API_ENVIRONMENT=
+GOOGLE_CLOUD_PROJECT=
+ENVIRONMENT=
+NUM_CHUNKS_RETRIEVED=
