--- a/requirements.txt
+++ b/requirements.txt
@@ -121,6 +121,7 @@ PyYAML==6.0.1
 rdflib==7.0.0
 regex==2023.10.3
 requests==2.31.0
+requests-file==1.5.1
 requests-oauthlib==1.3.1
 retrying==1.3.4
 rsa==4.9
@@ -134,6 +135,7 @@ SQLAlchemy==2.0.23
 sympy==1.12
 tenacity==8.2.3
 tiktoken==0.5.1
+tldextract==5.1.1
 tokenizers==0.14.1
 torch==2.1.0
 tqdm==4.66.1
@@ -144,7 +146,7 @@ typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
 uritemplate==4.1.1
-urllib3<2
+urllib3==2.1.0
 websockets==12.0
 Werkzeug==3.0.1
 wrapt==1.15.0
