--- a/requirements.txt
+++ b/requirements.txt
@@ -146,7 +146,7 @@ typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
 uritemplate==4.1.1
-urllib3==2.1.0
+urllib3<2
 websockets==12.0
 Werkzeug==3.0.1
 wrapt==1.15.0
