--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,13 @@ blinker==1.7.0
 Brotli==1.1.0
 cachetools==5.3.2
 certifi==2023.11.17
+cffi==1.16.0
 charset-normalizer==3.3.2
 ci-info==0.3.0
 click==8.1.7
 configobj==5.0.8
 configparser==6.0.0
+cryptography==41.0.7
 dataclasses-json==0.6.3
 Deprecated==1.2.14
 deprecation==2.1.0
@@ -51,6 +53,7 @@ httplib2==0.22.0
 httpx==0.25.2
 huggingface-hub==0.17.3
 idna==3.6
+importlib-metadata==7.0.0
 isodate==0.6.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -95,6 +98,7 @@ packaging==23.2
 pandas==2.1.3
 pathlib==1.0.1
 pdfminer==20191125
+pdfminer.six==20231228
 pikepdf==8.6.0
 Pillow==10.1.0
 pinecone-client==2.2.4
@@ -104,6 +108,7 @@ prov==2.0.0
 psutil==5.9.6
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pycparser==2.21
 pycryptodome==3.19.0
 pycryptodomex==3.19.0
 pydantic==2.5.2
@@ -146,9 +151,10 @@ typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
 uritemplate==4.1.1
-urllib3<2
+urllib3==1.26.18
 websockets==12.0
 Werkzeug==3.0.1
 wrapt==1.15.0
 yarl==1.9.3
 yt-dlp==2023.11.16
+zipp==3.17.0
