--- a/requirements.txt
+++ b/requirements.txt
@@ -94,6 +94,7 @@ nvidia-nvjitlink-cu12==12.3.52
 nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
 openai==0.28.1
+outcome==1.3.0.post0
 packaging==23.2
 pandas==2.1.3
 pathlib==1.0.1
@@ -118,6 +119,7 @@ PyMuPDF==1.23.5
 PyMuPDFb==1.23.5
 pyparsing==3.1.1
 pypdf==3.17.0
+PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
@@ -132,9 +134,11 @@ retrying==1.3.4
 rsa==4.9
 safetensors==0.4.0
 scipy==1.11.3
+selenium==4.16.0
 simplejson==3.19.2
 six==1.16.0
 sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.5
 SQLAlchemy==2.0.23
 sympy==1.12
@@ -146,6 +150,8 @@ torch==2.1.0
 tqdm==4.66.1
 traits==6.3.2
 transformers==4.35.0
+trio==0.24.0
+trio-websocket==0.11.1
 triton==2.1.0
 typing-inspect==0.9.0
 typing_extensions==4.8.0
@@ -155,6 +161,7 @@ urllib3==1.26.18
 websockets==12.0
 Werkzeug==3.0.1
 wrapt==1.15.0
+wsproto==1.2.0
 yarl==1.9.3
 yt-dlp==2023.11.16
 zipp==3.17.0
