data upload: latest CSV aggregates

--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,7 @@ PINECONE_API_ENVIRONMENT=
 GOOGLE_CLOUD_PROJECT=
 ENVIRONMENT=
 NUM_CHUNKS_RETRIEVED=
+NUM_CHUNKS_SEARCHED_FOR_RERANKING=
+YOUTUBE_API_KEY=
+YOUTUBE_CHANNELS=
+ASSEMBLY_AI_API_KEY=
