--- a/cloudbuild_app.yaml
+++ b/cloudbuild_app.yaml
@@ -1,16 +1,33 @@
 steps:
+  # Build the first Docker image (llama-flask-app)
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'build'
       - '-t'
       - 'gcr.io/mev-fyi/llama-flask-app:$SHORT_SHA'
-      - '-f'  # Specify the Dockerfile path
-      - './Dockerfile_app'  # Use the path to your Dockerfile
-      - .
+      - '-f'
+      - './Dockerfile_app'
+      - '.'
 
-  # Push the Docker image to Google Container Registry
+  # Push the first Docker image to Google Container Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/mev-fyi/llama-flask-app:$SHORT_SHA']
 
+  # Build the second Docker image (twitter-bot-app)
+  - name: 'gcr.io/cloud-builders/docker'
+    args:
+      - 'build'
+      - '-t'
+      - 'gcr.io/mev-fyi/twitter-bot-app:$SHORT_SHA'
+      - '-f'
+      - './Dockerfile_twitter_bot_app'
+      - '.'
+
+  # Push the second Docker image to Google Container Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/mev-fyi/twitter-bot-app:$SHORT_SHA']
+
+# Specify the images to be available in the Container Registry
 images:
   - 'gcr.io/mev-fyi/llama-flask-app:$SHORT_SHA'
+  - 'gcr.io/mev-fyi/twitter-bot-app:$SHORT_SHA'
