feat: add test_twitter_bot docker bash script and flask python script

--- a/Dockerfile_twitter_bot_app
+++ b/Dockerfile_twitter_bot_app
@@ -37,7 +37,8 @@ ENV FLASK_RUN_PORT=8080
 EXPOSE 8080
 
 # Command to run the application
-CMD ["gunicorn", "--timeout", "3600", "-w", "4", "-b", "0.0.0.0:8080", "src.Llama_index_sandbox.twitter_bot_app:twitter_bot_app"]
+CMD ["gunicorn", "--timeout", "3600", "-w", "4", "-b", "0.0.0.0:8080", "src.Llama_index_sandbox.twitter_bot_app:app"]
+
 
 # NOTE on number of gunicorn workers: If you're deploying your container on Google Cloud Platform and you've configured each instance to have 2 vCPUs, then
 # you effectively have 2 cores available for each instance. This information is crucial for configuring the number of Gunicorn workers optimally.
