--- a/requirements.txt
+++ b/requirements.txt
@@ -153,6 +153,7 @@ transformers==4.35.0
 trio==0.24.0
 trio-websocket==0.11.1
 triton==2.1.0
+tweepy==4.14.0
 typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
