--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ assemblyai==0.20.0
 async-timeout==4.0.3
 atlassian-python-api==3.41.3
 attrs==23.1.0
+backoff==2.2.1
 beautifulsoup4==4.12.2
 blinker==1.7.0
 Brotli==1.1.0
