--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,9 @@ google-auth-httplib2==0.1.1
 google-cloud-core==2.3.3
 google-cloud-firestore==2.13.1
 google-cloud-secret-manager==2.16.4
+google-cloud-storage==2.14.0
+google-crc32c==1.5.0
+google-resumable-media==2.7.0
 googleapis-common-protos==1.61.0
 greenlet==3.0.1
 grpc-google-iam-v1==0.12.6
