feat: add new selenium driver for docker inside GCE - update screenshot and media upload

--- a/Dockerfile_twitter_bot_app
+++ b/Dockerfile_twitter_bot_app
@@ -7,6 +7,8 @@ ARG DOCKERIGNORE_CONTEXT=twitter_bot_app
 # Set the working directory in the container
 WORKDIR /twitter_bot_app
 
+RUN mkdir -p /tmp
+
 # Copy the requirements file to the working directory in the container
 COPY requirements.txt .
 
