--- a/cloudbuild_app.yaml
+++ b/cloudbuild_app.yaml
@@ -21,7 +21,11 @@ steps:
       - 'gcr.io/mev-fyi/twitter-bot-app:$SHORT_SHA'
       - '-f'
       - './Dockerfile_twitter_bot_app'
+      - '--build-arg'
+      - 'DOCKERIGNORE_CONTEXT=twitter_bot_app'
       - '.'
+    # Specify the files to include in the build context
+    dir: 'src/Llama_index_sandbox'  # Replace with your actual directory path
 
   # Push the second Docker image to Google Container Registry
   - name: 'gcr.io/cloud-builders/docker'
